fix: expanded flatlist view on mobile

--- a/src/styles/flatlist.scss
+++ b/src/styles/flatlist.scss
@@ -118,6 +118,10 @@ ol.flatlist {
             @include respond-below(md) {
                 grid-template-columns: minmax(0,20ch) minmax(0,1fr) min-content;
             }
+
+            @include respond-below(sm) {
+                grid-template-columns: minmax(0,1fr) min-content;
+            }
         }
 
         @include respond-below(sm) {
@@ -135,7 +139,7 @@ ol.flatlist {
             &:not(.no-padding-right) {
                 padding-right: 1rem;
 
-                > *:last-child {
+                > *:last-child, .expanded {
                     padding-right: 0;
                 }
             }
